# neuro_and_tochka_orion_case

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  conftest.py  docker-compose.yml  fix.py  Книга1.xlsx
.github/workflows/: ci.yml
docs/: ai_orchestrator_spec.md  api_docs.md  api_gatewat.md  backend.md  document_service_spec.md  document_service_technical_plan.md  frontend_api.md  ingestion_process.md  ingestion_service_spec.md  llm_service_spec.md  mcp_tools_proxy_spec.md  p_diddy.md  pipeline.md  project_progress.md  retrieval_service_spec.md  safety_service_spec.md  services_overview.md  services_state_report.md
docs/services/: ai_orchestrator.md  ai_orchestrator_progress.md  api_gateway.md  api_gateway_progress.md  document_service.md  document_service_progress.md  ingestion_service.md  ingestion_service_progress.md  llm_service.md  llm_service_progress.md  mcp_tools_proxy.md  mcp_tools_proxy_progress.md  ml_observer.md  ml_observer_progress.md  retrieval_service.md  retrieval_service_progress.md  safety_service.md  safety_service_progress.md
services/ai_orchestrator/: Dockerfile  README.md  pyproject.toml
services/ai_orchestrator/ai_orchestrator/: config.py  main.py  schemas.py
services/ai_orchestrator/ai_orchestrator/clients/: llm.py  mcp.py  retrieval.py  runtime.py  safety.py
services/ai_orchestrator/ai_orchestrator/core/: context_builder.py  orchestrator.py
services/ai_orchestrator/ai_orchestrator/routers/: orchestrator.py
services/ai_orchestrator/tests/: test_orchestrator.py  test_respond.py
services/api_gateway/: Dockerfile  README.md
services/api_gateway/api_gateway/: config.py  logging.py  main.py
services/api_gateway/api_gateway/clients/: orchestrator.py
services/api_gateway/api_gateway/routers/: assistant.py
services/document_service/: Dockerfile  README.md  pyproject.toml
services/document_service/document_service/: config.py  db.py  main.py  models.py  schemas.py  storage.py
services/document_service/document_service/core/: repository.py
services/document_service/document_service/routers/: documents.py
services/document_service/tests/: test_documents.py  test_postgres_repository.py
services/ingestion_service/: Dockerfile  README.md  pyproject.toml
services/ingestion_service/ingestion_service/: config.py  main.py  schemas.py
services/ingestion_service/ingestion_service/core/: embedding.py  jobs.py  parser.py  pipeline.py  queue.py  storage.py  summarizer.py  vector_store.py
services/ingestion_service/ingestion_service/routers/: __init__.py  ingestion.py
services/ingestion_service/tests/: test_ingestion.py
services/llm_service/: Dockerfile  README.md  pyproject.toml
services/llm_service/llm_service/: config.py  main.py  schemas.py
services/llm_service/llm_service/clients/: mcp.py  runtime.py
services/llm_service/llm_service/core/: orchestrator.py  prompt.py
services/llm_service/llm_service/routers/: llm.py
services/llm_service/tests/: test_generate.py  test_integration_pipeline.py
services/mcp_tools_proxy/: Dockerfile  README.md  pyproject.toml
services/mcp_tools_proxy/mcp_tools_proxy/: config.py  main.py  schemas.py
services/mcp_tools_proxy/mcp_tools_proxy/clients/: documents.py  retrieval.py
services/mcp_tools_proxy/mcp_tools_proxy/core/: executor.py  rate_limit.py
services/mcp_tools_proxy/mcp_tools_proxy/routers/: __init__.py  mcp.py
services/mcp_tools_proxy/mcp_tools_proxy/tools/: base.py  chunk_window.py  list_tools.py  local_search.py  read_metadata.py  read_pages.py  read_section.py
services/mcp_tools_proxy/tests/: test_chunk_window_tool.py  test_error_serialization.py  test_execute.py  test_list_tools.py
services/ml_observer/: Dockerfile  README.md  pyproject.toml  run_tests.sh
services/ml_observer/ml_observer/: config.py  db.py  logging.py  main.py  models.py  schemas.py
services/ml_observer/ml_observer/core/: repository.py
services/ml_observer/ml_observer/routers/: __init__.py  observer.py  ui.py
services/ml_observer/tests/: test_observer.py
services/openwebui_adapter/: Dockerfile  README.md  pyproject.toml
services/openwebui_adapter/openwebui_adapter/: config.py  main.py  schemas.py  utils.py
services/openwebui_adapter/openwebui_adapter/clients/: gateway.py
services/openwebui_adapter/openwebui_adapter/routers/: openai.py
services/openwebui_adapter/tests/: test_adapter.py
services/retrieval_service/: Dockerfile  README.md  build_bm25_index.py  pyproject.toml
services/retrieval_service/.bm25_index/: _MAIN_1.toc
services/retrieval_service/retrieval_service/: config.py  logging.py  main.py  schemas.py
services/retrieval_service/retrieval_service/core/: bm25.py  embedding.py  index.py  reranker.py
services/retrieval_service/retrieval_service/routers/: chunks.py  retrieval.py
services/retrieval_service/tests/: test_chunks_window.py  test_search.py
services/safety_service/: Dockerfile  README.md  pyproject.toml
services/safety_service/safety_service/: config.py
services/safety_service/safety_service/core/: evaluator.py  llm_guard.py
services/safety_service/tests/: test_evaluator.py
tests/: test_pipeline_integration.py
