[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-service"
version = "0.1.0"
description = "Document metadata service for Orion Visior"
readme = "README.md"
authors = [{name="Orion Soft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "aioboto3>=12.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "testcontainers>=4.6.0"
]

[tool.uvicorn]
app = "document_service.main:app"
host = "0.0.0.0"
port = 8060
reload = true
