[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-service"
version = "0.1.0"
description = "Document ingestion skeleton for Orion Visior"
readme = "README.md"
authors = [{name="Orion Soft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.1.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.2",
    "chromadb>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "testcontainers>=4.6.0",
    "fakeredis>=2.23.2"
]

[tool.setuptools]
packages = ["ingestion_service"]

[tool.uvicorn]
app = "ingestion_service.main:app"
host = "0.0.0.0"
port = 8050
reload = true
