[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-observer"
version = "0.1.0"
description = "ML Observer playground service for Orion Visior"
readme = "README.md"
authors = [{name = "Orion Soft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "anyio>=4.0.0",
]

[tool.uvicorn]
app = "ml_observer.main:app"
host = "0.0.0.0"
port = 8085
reload = true
