[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwebui-adapter"
version = "0.1.0"
description = "OpenAI-compatible shim for Orion API Gateway"
readme = "README.md"
authors = [{name = "Orion Soft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "anyio>=4.3.0"
]

[tool.uvicorn]
app = "openwebui_adapter.main:app"
host = "0.0.0.0"
port = 8093
reload = true
