[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-service"
version = "0.1.0"
description = "Safety guardrails service for Orion Visior"
readme = "README.md"
authors = [{name="Orion Soft"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.1.0",
    "openai>=1.40.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "httpx>=0.27.0"
]

[tool.uvicorn]
app = "safety_service.main:app"
host = "0.0.0.0"
port = 8081
reload = true
